[package]
name = "async-named-locker"
version = "0.1.1"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/wugren/async-named-locker.git"
description = "Lock implemented using future"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-future = "0.1.1"
lazy_static = "1.4.0"
log = "0.4.17"

[dev-dependencies]
async-std = "1.12.0"
